# Kitware

./: README.md
slam/: CHANGELOG.md  CMakeLists.txt  README.md
slam/ci/: .gitlab-ci.yml  Dockerfile  README.md
slam/paraview_wrapping/: CMakeLists.txt
slam/paraview_wrapping/Plugin/: CMakeLists.txt  paraview.plugin
slam/paraview_wrapping/Plugin/doc/: How_to_SLAM_with_LidarView.html  How_to_SLAM_with_LidarView.md
slam/paraview_wrapping/Plugin/vtkLidarSlam/: CMakeLists.txt  Slam.xml  vtk.module  vtkSlam.cxx  vtkSlam.h  vtkSlamManager.cxx  vtkSlamManager.h  vtkSpinningSensorKeypointExtractor.cxx  vtkSpinningSensorKeypointExtractor.h
slam/ros_wrapping/gps_conversions/: CMakeLists.txt  package.xml
slam/ros_wrapping/gps_conversions/src/: GpsToUtmNode.cxx  GpsToUtmNode.h  NavSatFixToGpsFixNode.cxx  NavSatFixToGpsFixNode.h  OdomToGpsNode.cxx  OdomToGpsNode.h
slam/ros_wrapping/lidar_conversions/: CMakeLists.txt  README.md  package.xml
slam/ros_wrapping/lidar_conversions/src/: RobosenseToLidarNode.cxx  RobosenseToLidarNode.h  Utilities.h  VelodyneToLidarNode.cxx  VelodyneToLidarNode.h
slam/ros_wrapping/lidar_slam/: CMakeLists.txt  README.md  package.xml
slam/ros_wrapping/lidar_slam/launch/: gps_conversions.launch  slam.launch
slam/ros_wrapping/lidar_slam/msg/: Confidence.msg  SlamCommand.msg
slam/ros_wrapping/lidar_slam/params/: slam.rviz  slam_config.yaml
slam/ros_wrapping/lidar_slam/src/: LidarSlamNode.cxx  LidarSlamNode.h  LidarSlamNode_main.cxx  ros_transform_utils.h
slam/slam_lib/: CMakeLists.txt
slam/slam_lib/include/LidarSlam/: CeresCostFunctions.h  Enums.h  KeypointsMatcher.h  LidarPoint.h  PoseGraphOptimization.h  RollingGrid.h  SensorConstraints.h  Slam.h  SpinningSensorKeypointExtractor.h  Utilities.h
slam/slam_lib/src/: KeypointsMatcher.cxx  PoseGraphOptimization.cxx  RollingGrid.cxx  SensorConstraints.cxx  Slam.cxx  Utilities.cxx
